--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "illuminate/support": "5.8.*|^6.0|^7.0|^8.0",
         "symfony/stopwatch": "^4.0|^5.0"
     },
