--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "5.8.*|^6.0|^7.0|^8.0",
-        "symfony/stopwatch": "^4.0|^5.0"
+        "illuminate/support": "5.8.*|^6.0|^7.0|^8.0|^9.0",
+        "symfony/stopwatch": "^4.0|^5.0|^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.6|^5.0|^6.0",
