--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/stopwatch": "^4.0|^5.0|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.6|^5.0|^6.0",
+        "orchestra/testbench": "^4.6|^5.0|^6.0|^7.0",
         "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
