--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "5.8.*|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/support": "5.8.*|^6.0|^7.0|^8.0|^9.0|^10.0",
         "symfony/stopwatch": "^4.0|^5.0|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.6|^5.0|^6.0",
+        "orchestra/testbench": "^4.6|^5.0|^6.0|^8.0",
         "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
